fix for button opacity on Firefox

--- a/index.css
+++ b/index.css
@@ -59,5 +59,5 @@ body {
 }
 
 .button:hover {
-  opacity: 90%;
+  opacity: 90% !important;
 }
